demo/05_rag/deployment-app.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ic-chatbot
spec:
  serviceName: ic-chatbot
  replicas: 1
  selector:
    matchLabels:
      app: ic-chatbot
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ic-chatbot
        deployment: ic-chatbot
    spec:
      serviceAccount: code-server
      serviceAccountName: code-server
      containers:
        - name: insurance-claim-app
          image: quay.io/mmuraki/parasol_insurance_code_server:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8888
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: home
            mountPath: /home/coder
      securityContext:
        fsGroup: 1000
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete
  volumeClaimTemplates:
  - metadata:
      name: home
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
