demo/05_rag/maven.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maven
spec:
  selector:
    matchLabels:
      app: maven
  replicas: 1
  template:
    metadata:
      labels:
        app: maven
    spec:
      containers:
      - name: maven
        image: quay.io/mmuraki/parasol_insurance_maven_repository:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: maven
spec:
  selector:
    app: maven
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
