demo/05_rag/service-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ic-chatbot
  labels:
    app: ic-chatbot
spec:
  ports:
  - name: app
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: code-server
    protocol: TCP
    port: 8888
    targetPort: 8888
  selector:
    app: ic-chatbot
  sessionAffinity: None
  type: ClusterIP
