demo/05_rag/route-app.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ic-chatbot
  labels:
    app: ic-chatbot
spec:
  to:
    kind: Service
    name: ic-chatbot
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ic-chatbot-code-server
  labels:
    app: ic-chatbot
spec:
  to:
    kind: Service
    name: ic-chatbot
    weight: 100
  port:
    targetPort: 8888
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
